After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763435 - Gtk-WARNING **: Drawing a gadget with negative dimensions. Did you forget to allocate a size? (node grid owner RBHeader)
Gtk-WARNING **: Drawing a gadget with negative dimensions. Did you forget to ...
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: User Interface
3.3
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-10 08:37 UTC by Torben Andresen
Modified: 2016-03-15 00:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Torben Andresen 2016-03-10 08:37:41 UTC
Hi,

i get continously this entry in my Journal. I'm using Gnome 3.19 on Archlinux. Using rhythmbox is no problem but my Journal is like flooded with this entry.

Gtk-WARNING **: Drawing a gadget with negative dimensions. Did you forget to allocate a size? (node grid owner RBHeader)

It is always exactly this message.
Comment 1 Jonathan Matthew 2016-03-15 00:03:03 UTC
fixed in commit 0598c9d