header: chain up in size_allocate

We re-allocate everything immediately afterwards, but GtkGrid now has
a css gadget that needs to have its own sizing applied first.

https://bugzilla.gnome.org/show_bug.cgi?id=763435